--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,43 +65,43 @@ spring:
       client:
         registration:
           google:
-            clientId: ${OAUTH_GOOGLE_CLIENT_ID}
-            clientSecret: ${OAUTH_GOOGLE_SECRET}
-            authorizationGrantType: authorization_code
-            redirectUri: "{baseUrl}/api/oauth/login/callback/{registrationId}"
+            client-id: ${OAUTH_GOOGLE_CLIENT_ID}
+            client-secret: ${OAUTH_GOOGLE_SECRET}
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/api/oauth/login/callback/{registrationId}"
             scope:
               - openid
               - email
               - profile
           facebook:
-            clientId: ${OAUTH_FB_CLIENT_ID}
-            clientSecret: ${OAUTH_FB_SECRET}
-            authorizationGrantType: authorization_code
-            redirectUri: "{baseUrl}/api/oauth/login/callback/{registrationId}"
+            client-id: ${OAUTH_FB_CLIENT_ID}
+            client-secret: ${OAUTH_FB_SECRET}
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/api/oauth/login/callback/{registrationId}"
             scope:
               - email
               - public_profile
           vk:
-            clientId: ${OAUTH_VK_CLIENT_ID}
-            clientSecret: ${OAUTH_VK_SECRET}
-            authorizationGrantType: authorization_code
+            client-id: ${OAUTH_VK_CLIENT_ID}
+            client-secret: ${OAUTH_VK_SECRET}
+            authorization-grant-type: authorization_code
             client-authentication-method: post
-            redirectUri: "{baseUrl}/api/oauth/login/callback/{registrationId}"
+            redirect-uri: "{baseUrl}/api/oauth/login/callback/{registrationId}"
             scope: email
         provider:
           google:
-            tokenUri: https://www.googleapis.com/oauth2/v4/token
-            authorizationUri: https://accounts.google.com/o/oauth2/v2/auth
-            userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
+            token-uri: https://www.googleapis.com/oauth2/v4/token
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
           facebook:
-            tokenUri: https://graph.facebook.com/v3.0/oauth/access_token
-            authorizationUri: https://www.facebook.com/v3.0/dialog/oauth
-            userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+            token-uri: https://graph.facebook.com/v7.0/oauth/access_token
+            authorization-uri: https://www.facebook.com/v7.0/dialog/oauth
+            user-info-uri: https://graph.facebook.com/v7.0/me?fields=first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
           vk:
-            userNameAttribute: user_id
-            tokenUri: https://oauth.vk.com/access_token
-            authorizationUri: https://oauth.vk.com/authorize
-            userInfoUri: https://api.vk.com/method/users.get?fields=photo_max_orig&v=5.92
+            user-name-attribute: user_id
+            token-uri: https://oauth.vk.com/access_token
+            authorization-uri: https://oauth.vk.com/authorize
+            user-info-uri: https://api.vk.com/method/users.get?fields=id,photo_max_orig&v=5.130
 
 media:
   imageDirectory: ./data/images
