--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,24 +8,24 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      - DB_SERVER=postgres
-      - DB_DATABASE=tonkoslovie
-      - DB_USER=${POSTGRES_USER:-postgres}
-      - DB_PASSWORD=${POSTGRES_PASSWORD:-1234}
-      - REDIS_HOST=redis
-      - INFLUXDB_ENABLED=true
-      - INFLUXDB_URI=http://influxdb:8086
-      - INFLUXDB_USER=${INFLUXDB_USER:-admin}
-      - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD:-1234}
-      - OAUTH_GOOGLE_CLIENT_ID=${OAUTH_GOOGLE_CLIENT_ID:-test}
-      - OAUTH_GOOGLE_SECRET=${OAUTH_GOOGLE_SECRET:-test}
-      - OAUTH_FB_CLIENT_ID=${OAUTH_FB_CLIENT_ID:-test}
-      - OAUTH_FB_SECRET=${OAUTH_FB_SECRET:-test}
-      - OAUTH_VK_CLIENT_ID=${OAUTH_VK_CLIENT_ID:-test}
-      - OAUTH_VK_SECRET=${OAUTH_VK_SECRET:-test}
-      - MAIL_USERNAME=${MAIL_USERNAME:-test}
-      - MAIL_PASSWORD=${MAIL_PASSWORD:-test}
-      - JWT_SECRET=${JWT_SECRET:-nUmHdv1cSMjl4v1D8yD6VLIjdm4S5Q4O}
+      DB_SERVER: postgres
+      DB_DATABASE: tonkoslovie
+      DB_USER: ${POSTGRES_USER:-postgres}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-1234}
+      REDIS_HOST: redis
+      INFLUXDB_ENABLED: 'true'
+      INFLUXDB_URI: http://influxdb:8086
+      INFLUXDB_USER: ${INFLUXDB_USER:-admin}
+      INFLUXDB_PASSWORD: ${INFLUXDB_PASSWORD:-1234}
+      OAUTH_GOOGLE_CLIENT_ID: ${OAUTH_GOOGLE_CLIENT_ID:-test}
+      OAUTH_GOOGLE_SECRET: ${OAUTH_GOOGLE_SECRET:-test}
+      OAUTH_FB_CLIENT_ID: ${OAUTH_FB_CLIENT_ID:-test}
+      OAUTH_FB_SECRET: ${OAUTH_FB_SECRET:-test}
+      OAUTH_VK_CLIENT_ID: ${OAUTH_VK_CLIENT_ID:-test}
+      OAUTH_VK_SECRET: ${OAUTH_VK_SECRET:-test}
+      MAIL_USERNAME: ${MAIL_USERNAME:-test}
+      MAIL_PASSWORD: ${MAIL_PASSWORD:-test}
+      JWT_SECRET: ${JWT_SECRET:-nUmHdv1cSMjl4v1D8yD6VLIjdm4S5Q4O}
     ports:
       - 8081:8080
     volumes:
@@ -36,22 +36,22 @@ services:
     image: postgres:11-alpine
     container_name: tonkoslovie_postgres
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-1234}
-      - POSTGRES_DB=tonkoslovie
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-1234}
+      POSTGRES_DB: tonkoslovie
     ports:
       - 5432:5432
     healthcheck:
-        test: ["CMD-SHELL", "pg_isready -U postgres"]
-        interval: 10s
-        timeout: 3s
-        retries: 5
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   redis:
     image: redis:5-alpine
     container_name: tonkoslovie_redis
     healthcheck:
-      test: ["CMD-SHELL", "redis-cli", "ping"]
+      test: [ "CMD-SHELL", "redis-cli", "ping" ]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -65,10 +65,50 @@ services:
       - ./nginx/nginx_local.conf:/etc/nginx/nginx.conf
       - ./data:/usr/share/nginx/html/tonkoslovie
     healthcheck:
-      test: ["CMD", "service", "nginx", "status"]
+      test: [ "CMD", "service", "nginx", "status" ]
       interval: 10s
       timeout: 3s
       retries: 5
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: tonkoslovie_zookeeper
+    environment:
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_SERVERS: zookeeper:22888:23888
+    ports:
+      - 2181:2181
+
+  kafka:
+    image: confluentinc/cp-kafka
+    container_name: tonkoslovie_kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - 9092:9092
+    restart: on-failure
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: INSIDE://kafka:29092,OUTSIDE://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_BROKER_ID: 1
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  kafka-ui:
+    image: obsidiandynamics/kafdrop
+    container_name: tonkoslovie_kafka-ui
+    depends_on:
+      - kafka
+    ports:
+      - 9002:9000
+    environment:
+      KAFKA_BROKERCONNECT: kafka:29092
 
   influxdb:
     image: influxdb:1.7-alpine
@@ -76,12 +116,12 @@ services:
     ports:
       - 8086:8086
     environment:
-      - INFLUXDB_HTTP_AUTH_ENABLED=true
-      - INFLUXDB_ADMIN_USER=${INFLUXDB_USER:-admin}
-      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD:-1234}
-      - INFLUXDB_HTTP_LOG_ENABLED=false
+      INFLUXDB_ADMIN_USER: ${INFLUXDB_USER:-admin}
+      INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASSWORD:-1234}
+      INFLUXDB_HTTP_AUTH_ENABLED: 'true'
+      INFLUXDB_HTTP_LOG_ENABLED: 'false'
     healthcheck:
-      test: ["CMD-SHELL", "ln -sf /bin/busybox /bin/wget && /bin/wget -q -Y off http://localhost:8086/metrics -O /dev/null > /dev/null 2>&1"]
+      test: [ "CMD-SHELL", "ln -sf /bin/busybox /bin/wget && /bin/wget -q -Y off http://localhost:8086/metrics -O /dev/null > /dev/null 2>&1" ]
       interval: 10s
       timeout: 3s
       retries: 5
